--- a/2023_TKI_EMCR/poster.Rmd
+++ b/2023_TKI_EMCR/poster.Rmd
@@ -4,7 +4,7 @@ author:
   - name: Stevie Pederson
     affil: [1, 2]
   - name: Yassine Souilmi
-    affil: [1, 2]
+    affil: [1, 3]
   - name: Alex Brown
     affil: [1, 2]
   - name: Jimmy Breen
@@ -14,6 +14,8 @@ affiliation:
     address: Black Ochre Data Labs, Telethon Kids Institute, Adelaide
   - num: 2
     address: John Curtin School of Medical Research, Australian National University, Canberra
+  - num: 3
+    address: School of Biological Sciences, University of Adelaide, Adelaide
 column_numbers: 3
 logoright_name: tki.jpg
 logoleft_name: bodl_logo_white_background.jpg
@@ -21,6 +23,8 @@ output:
   posterdown::posterdown_html
 bibliography: bibliography.bib
 primary_colour: "#9e2900"
+poster_height: "33.75in"
+poster_width: "60in"
 ---
 
 ```{r, echo=FALSE}
@@ -42,7 +46,7 @@ Proteins form well-known molecules like the keratin in your hair, haemoglobin in
 *How do we get from DNA to Proteins?*
 The answer is *RNA* (Figure \@ref(fig:fig1))
 
-```{r fig1, echo=FALSE, out.width='40%', fig.show='hold', fig.cap = "*(Left) The Central Dogma of Biology DNA $\\implies$ RNA $\\implies$ Protein. (Right) Representation of DNA being transcribed into RNA. Taken from app.biorender.com*"}
+```{r fig1, echo=FALSE, out.width= c('40%', '36%'), fig.show='hold', fig.cap = "*(Left) The Central Dogma of Biology DNA $\\implies$ RNA $\\implies$ Protein. (Right) Representation of DNA being transcribed into RNA. Taken from app.biorender.com*"}
 knitr::include_graphics("central_dogma.png")
 knitr::include_graphics("transcripton.png")
 ```
@@ -65,7 +69,7 @@ Whilst transcribed from a discrete set of genes as a single RNA molecule, in ord
 Most genes can have their exons joined together in multiple version, known as *isoforms* and these add a layer of complexity, with multiple transcript versions being able to be produced from a single gene (Figure \@ref(fig:fig2)).
 As a result, the ~60,000 genes are capable of producing >250,000 different transcripts.
 
-```{r fig2, echo=FALSE, out.width='75%', fig.cap = "*Alternate transcripts are able to be formed from different combinations of exons. Taken from app.biorender.com*"}
+```{r fig2, echo=FALSE, out.width='63%', fig.cap = "*Alternate transcripts are able to be formed from different combinations of exons. Taken from app.biorender.com*"}
 knitr::include_graphics("splicing.png")
 ```
 
@@ -73,7 +77,7 @@ knitr::include_graphics("splicing.png")
 
 # How Do We Analyse a Transcriptome?
 
-```{r fig3, echo=FALSE, out.width='70%', fig.cap = "*Complete summary of transcriptome analysis, taken from [@berge2019]*"}
+```{r fig3, echo=FALSE, out.width='63%', fig.cap = "*Complete summary of transcriptome analysis, taken from [@berge2019]*"}
 knitr::include_graphics("sequencing.jpeg")
 ```
 
@@ -105,7 +109,7 @@ This can have a non-trivial impact on where each read aligns and which transcrip
 An alternate genome reference was created incorporating these variants and 6 samples from the PROPHECY transcriptomics layer were aligned to both the standard reference and the modified reference.
 Analysis at the gene-level showed significant changes in gene expression estimates based on which reference was used.
 
-```{r, echo=FALSE, out.width = c('45%', '41%'), fig.show='hold', fig.cap = "*(Left) Changes in gene expression estimates for PROPHECY samples based on the 1000GP-modified reference. (Right) Genes showing increased variability as a results of using a modified reference.*"}
+```{r, echo=FALSE, out.width = c('40%', '36%'), fig.show='hold', fig.cap = "*(Left) Changes in gene expression estimates for PROPHECY samples based on the 1000GP-modified reference. (Right) Genes showing increased variability as a results of using a modified reference.*"}
 knitr::include_graphics("ma-plot-1.png")
 knitr::include_graphics("sd-by-expr-1.png")
 ```
