Update before heading to the airport

--- a/2023_ABACBS/2023_ABACBS_poster.tex
+++ b/2023_ABACBS/2023_ABACBS_poster.tex
@@ -73,9 +73,16 @@ In addition, a tool for creating custom reference transcriptomes has been develo
 		The Indigenous Australian population contains a large amount of unique genetic diversity.
 		Given that risk factors are increasingly being shown to be polygenic and dependent on the genetic background. ignoring diversity in a large cohort may limit our ability to address this contribution.\\
 		
-		The historical relationship between researchers and the Aboriginal community has been problematic and as such, this population is poorly represented in databases such as the 1000 Genomes Project, and the Human Genome Diversity Project.
+		The historical relationship between researchers and the Aboriginal community has been problematic and as such, this population is poorly represented in databases such as the 1000 Genomes Project (1000GP), and the Human Genome Diversity Project (HGDP).
 		Prepared in a highly consultative, and indigenous-led manner, the PROPHECY study present a unique opportunity to provide access to precision medicine for members of the Indigenous Australian community.
 		The unique design of the study also presents a unique opportunity to include population-level diversity across all -omics layers in the study.
+
+    	}
+    	\vspace{-1cm}
+    	
+    	\block{Variants from the 1000 Genomes Project}{
+		\Large
+		Taking the 1000GP variants as a proof of principle, an gene-level analysis (\textit{STARconsensus}) was performed comparing the standard hg38 reference against one incorporating SNPs and InDels from the 1000GP.
 
     	}
     	\vspace{-1cm}
