--- a/2023_ABACBS/2023_ABACBS_poster.tex
+++ b/2023_ABACBS/2023_ABACBS_poster.tex
@@ -12,6 +12,7 @@
 \usepackage{adjustbox}
 \usepackage{enumitem}
 \usepackage{wrapfig}
+\usepackage{booktabs}
 \usepackage[backend=bibtex,style=numeric,doi=false,url=false,eprint=false,sorting=none,autocite=superscript]{biblatex}
 \usepackage{bodl}
 \usetikzlibrary{positioning,shapes,arrows}
@@ -55,41 +56,77 @@
 
 \centering
 
-\block{Abstract}{
-Alignment of transcriptomic data to the standard reference genome has recently been shown to be a problematic strategy\autocite{Kaminow2022-dz}. 
-This is particularly relevant for populations which are poorly represented within existing repositories that capture global diversity, and when these populations themselves are known to contain a poorly characterised amount of unique variation.\\
-
-The use of an alternate reference genome which incorporates an appropriate set of variants has also been shown to improve alignments and quantifications at the gene level. 
-We propose that we will incorporate variant sets from public repositories as well as a custom set of variants identified within our study cohort and assess the impact on gene quantification across each alternate reference genome. 
-This is then extended into transcript-level quantification and the incorporation of user-defined sets of variants into an alternate reference transcriptome.
-In addition, a tool for creating custom reference transcriptomes has been developed.
-
-}
+%\block{Abstract}{
+%Alignment of transcriptomic data to the standard reference genome has recently been shown to be a problematic strategy\autocite{Kaminow2022-dz}. 
+%This is particularly relevant for populations which are poorly represented within existing repositories that capture global diversity, and when these populations themselves are known to contain a poorly characterised amount of unique variation.\\
+%
+%The use of an alternate reference genome which incorporates an appropriate set of variants has also been shown to improve alignments and quantifications at the gene level. 
+%We propose that we will incorporate variant sets from public repositories as well as a custom set of variants identified within our study cohort and assess the impact on gene quantification across each alternate reference genome. 
+%This is then extended into transcript-level quantification and the incorporation of user-defined sets of variants into an alternate reference transcriptome.
+%In addition, a tool for creating custom reference transcriptomes has been developed.
+%
+%}
 
 \begin{columns}
-    \column{0.33}
+    \column{0.32}
     	\block{Genomic Variability}{
-		\Large
-		The Indigenous Australian population contains a large amount of unique genetic diversity.
-		Given that risk factors are increasingly being shown to be polygenic and dependent on the genetic background. ignoring diversity in a large cohort may limit our ability to address this contribution.\\
+		\large
+        \begin{minipage}{0.7\linewidth}
+		The Indigenous Australian population contains a large amount of unique genetic diversity.       
+				Given that risk factors are increasingly being shown to be polygenic and dependent on the genetic background. ignoring diversity in a large cohort may limit our ability to address this contribution. 
+        \end{minipage}
+        \hspace{5mm}
+        \begin{minipage}{0.22\linewidth}
+        \centering
+        \small
+        	\includegraphics[scale=1]{25_unique.png} \\
+        	Genomic variants unique to Indigenous Australians
+        \end{minipage}
+        \vspace{1cm}
 		
 		The historical relationship between researchers and the Aboriginal community has been problematic and as such, this population is poorly represented in databases such as the 1000 Genomes Project (1000GP), and the Human Genome Diversity Project (HGDP).
-		Prepared in a highly consultative, and indigenous-led manner, the PROPHECY study present a unique opportunity to provide access to precision medicine for members of the Indigenous Australian community.
-		The unique design of the study also presents a unique opportunity to include population-level diversity across all -omics layers in the study.
+%		Prepared in a highly consultative, and indigenous-led manner, the PROPHECY study present a unique opportunity to provide access to precision medicine for members of the Indigenous Australian community.
+%		The unique design of the study also presents a unique opportunity to include population-level diversity across all -omics layers in the study.
 
     	}
     	\vspace{-1cm}
     	
     	\block{Variants from the 1000 Genomes Project}{
-		\Large
-		Taking the 1000GP variants as a proof of principle, an gene-level analysis (\textit{STARconsensus}) was performed comparing the standard hg38 reference against one incorporating SNPs and InDels from the 1000GP.
+		\large
+		
+		Taking consensus 1000GP variants (>50\%) as a \textit{proof-of-principle}, a gene-level analysis (\textit{STARconsensus}\autocite{Kaminow2022-dz}) was prepared comparing the standard hg38 reference against a modified reference incorporating SNPs and InDels from the 1000GP.\\[5mm]
+
+		\centering
+		\begin{tabular}{p{11cm}rrrr}
+
+		\toprule
+		Region & SNV & Insertion & Deletion & \textbf{Total} \\ 
+		  \midrule
+		No Classified Region & 1,281,298 & 110,072 & 113,176 & \textbf{1,504,546} \\ 
+		  Promoter & 151,537 & 13,775 & 14,616 & \textbf{179,928} \\ 
+		  Upstream Promoter & 100,273 & 9,848 & 9,845 & \textbf{119,966 }\\ 
+		  Exon & 68,628 & 4,682 & 4,814 & \textbf{78,124} \\ 
+		  UTR & 24,213 & 2,197 & 2,261 & \textbf{28,671} \\ 
+		  Splice Junction & 1,628 & 236 & 265 & \textbf{2,129 }\\ 
+		  Stop Codon &  36 &   1 &   5 &  \textbf{42} \\ 
+		  Start Codon &  16 &   3 &   2 &  \textbf{21} \\ 
+		   \bottomrule
+		\end{tabular}
+		\vspace{1cm}
+		
+		\includegraphics[scale=0.95]{var-in-genes.png} 
+		~\\
+		\normalsize
+		\textit{Genes with variants overlapping an exon}
+
+
 
     	}
     	\vspace{-1cm}
     
 
 
-    \column{0.34}
+    \column{0.36}
     \useblockstyle{KeyBlockStyle}
     \block{The PROPHECY Study}{
     \Large
@@ -104,14 +141,49 @@ In addition, a tool for creating custom reference transcriptomes has been develo
     \useblockstyle{UofABlockStyle}
 
     \block{Haploid Reference Strategies}{
-    Stuff
+    Develop a figure showing
 
     	
     }
 
-    \column{0.33}
-    \block{Pan Genome Reference Graphs}{
-		Stuff
+    \column{0.32}
+    \block{STAR Consensus Results}{
+    		\begin{minipage}{0.5\linewidth}
+	    		\large
+			6 Pilot Samples were aligned to hg38 along with the 1000GP-modified hg38.
+			Standard Differential Expression Analysis performed.
+			\begin{itemize}
+				\item \textbf{1 in 500 reads} were aligned to different locations
+				\item Direction of change\textbf{ was inconsistent} between samples
+				\item Some key genes were highly sensitive	
+			\end{itemize}
+		\end{minipage}
+		\begin{minipage}{0.45\linewidth}
+			\centering
+			\includegraphics[scale=0.6]{sd-by-expr-1.png} 
+			\textit{\normalsize Variability in estimates plotted against average signal}\\[15mm]
+		\end{minipage}
+
+		\vspace{1cm}		
+		\centering
+		\includegraphics[scale=0.75]{ma-by-variant-1.png} 
+		~\\
+		\textit{\normalsize Differential Gene Expression results showing genes which passed an FDR of 0.05 for consideration as differentially expressed}
+		
+	}
+	
+	\block{Developing a Variant-Modified Reference Transcriptome}{
+	\large
+	\begin{minipage}{0.75\linewidth}
+		The R package \texttt{transmogR}	has now been developed for using variants to modify a standard reference trancriptome, including decoy transcripts\autocite{Srivastava2020-tm}.
+		This approach is coordinate-agnostic $\implies$ mapping back to regulatory features and GWAS results remains uncomplicated
+	\end{minipage}		
+	\begin{minipage}{0.2\linewidth}
+		\centering
+		\includegraphics[scale=1]{transmogR.png}
+	\end{minipage}
+	\vspace{1cm}
+	
 
     \coloredbox{
 	    \colorlet{innerblockbodybgcolor}{white}
