--- a/2023_ABACBS/bibliography.bib
+++ b/2023_ABACBS/bibliography.bib
@@ -221,3 +221,57 @@
   language = "en"
 }
 
+
+@ARTICLE{Easteal2020-fo,
+  title    = "Equitable Expanded Carrier Screening Needs Indigenous Clinical
+              and Population Genomic Data",
+  author   = "Easteal, Simon and Arkell, Ruth M and Balboa, Renzo F and
+              Bellingham, Shayne A and Brown, Alex D and Calma, Tom and Cook,
+              Matthew C and Davis, Megan and Dawkins, Hugh J S and Dinger,
+              Marcel E and Dobbie, Michael S and Farlow, Ashley and Gwynne,
+              Kylie G and Hermes, Azure and Hoy, Wendy E and Jenkins, Misty R
+              and Jiang, Simon H and Kaplan, Warren and Leslie, Stephen and
+              Llamas, Bastien and Mann, Graham J and McMorran, Brendan J and
+              McWhirter, Rebekah E and Meldrum, Cliff J and Nagaraj,
+              Shivashankar H and Newman, Saul J and Nunn, Jack S and
+              Ormond-Parker, Lyndon and Orr, Neil J and Paliwal, Devashi and
+              Patel, Hardip R and Pearson, Glenn and Pratt, Greg R and
+              Rambaldini, Boe and Russell, Lynette W and Savarirayan, Ravi and
+              Silcocks, Matthew and Skinner, John C and Souilmi, Yassine and
+              Vinuesa, Carola G and {National Centre for Indigenous Genomics}
+              and Baynam, Gareth",
+  abstract = "Expanded carrier screening (ECS) for recessive monogenic diseases
+              requires prior knowledge of genomic variation, including DNA
+              variants that cause disease. The composition of pathogenic
+              variants differs greatly among human populations, but
+              historically, research about monogenic diseases has focused
+              mainly on people with European ancestry. By comparison, less is
+              known about pathogenic DNA variants in people from other parts of
+              the world. Consequently, inclusion of currently underrepresented
+              Indigenous and other minority population groups in genomic
+              research is essential to enable equitable outcomes in ECS and
+              other areas of genomic medicine. Here, we discuss this issue in
+              relation to the implementation of ECS in Australia, which is
+              currently being evaluated as part of the national Government's
+              Genomics Health Futures Mission. We argue that significant effort
+              is required to build an evidence base and genomic reference data
+              so that ECS can bring significant clinical benefit for many
+              Aboriginal and/or Torres Strait Islander Australians. These
+              efforts are essential steps to achieving the Australian
+              Government's objectives and its commitment ``to leveraging the
+              benefits of genomics in the health system for all Australians.''
+              They require culturally safe, community-led research and
+              community involvement embedded within national health and medical
+              genomics programs to ensure that new knowledge is integrated into
+              medicine and health services in ways that address the specific
+              and articulated cultural and health needs of Indigenous people.
+              Until this occurs, people who do not have European ancestry are
+              at risk of being, in relative terms, further disadvantaged.",
+  journal  = "Am. J. Hum. Genet.",
+  volume   =  107,
+  number   =  2,
+  pages    = "175--182",
+  month    =  aug,
+  year     =  2020,
+  language = "en"
+}
