--- a/2023_ABACBS/bodl.sty
+++ b/2023_ABACBS/bodl.sty
@@ -15,6 +15,8 @@
 \definecolor{Black}{HTML}{3d3d40} 
 \definecolor{DarkBlack}{HTML}{2b3036} 
 \definecolor{Yellow}{HTML}{ffb814} 
+\definecolor{BodlGreyGreen}{HTML}{759c78}
+\definecolor{BodlGreen}{HTML}{75b24d}
 
 % emory primary palette
 \definecolor{UofABlue}{HTML}{102535} 
